// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Select snapshots > css mode snapshot 1`] = `
"import React, { useState, useRef, useEffect, useId, createContext, useContext } from 'react';
import styles from './Select.module.css';
export interface SelectOption {
  value: string;
  label: string;
}

export type SelectVariant = 'default' | 'error';
export type SelectSize    = 'sm' | 'md' | 'lg';

export interface SelectProps {
  options?:  SelectOption[];
  value?:    string;
  onChange?: (value: string) => void;
  label?:    string;
  placeholder?: string;
  variant?:  SelectVariant;
  size?:     SelectSize;
  error?:    string;
  disabled?: boolean;
  children?: React.ReactNode;
}

interface SelectContextValue {
  isOpen: boolean;
  setIsOpen: (open: boolean) => void;
  value?: string;
  onChange?: (value: string) => void;
  activeIndex: number;
  setActiveIndex: (index: number | ((prev: number) => number)) => void;
  id: string;
  labelId: string;
  listboxId: string;
  size: SelectSize;
  disabled?: boolean;
  options: SelectOption[];
  setOptions: React.Dispatch<React.SetStateAction<SelectOption[]>>;
}

const SelectContext = createContext<SelectContextValue | undefined>(undefined);

const useSelectContext = () => {
  const context = useContext(SelectContext);
  if (!context) throw new Error('Select sub-components must be used within Select');
  return context;
};

export const SelectRoot = ({
  children,
  value,
  onChange,
  size = 'md',
  disabled,
}: SelectProps) => {
  const [isOpen, setIsOpen] = useState(false);
  const [activeIndex, setActiveIndex] = useState(-1);
  const [options, setOptions] = useState<SelectOption[]>([]);
  const containerRef = useRef<HTMLDivElement>(null);
  const id = useId();
  const labelId = \`\${id}-label\`;
  const listboxId = \`\${id}-listbox\`;

  useEffect(() => {
    const handleClickOutside = (e: MouseEvent) => {
      if (containerRef.current && !containerRef.current.contains(e.target as Node)) {
        setIsOpen(false);
      }
    };
    document.addEventListener('mousedown', handleClickOutside);
    return () => document.removeEventListener('mousedown', handleClickOutside);
  }, []);

  return (
    <SelectContext.Provider value={{
      isOpen, setIsOpen, value, onChange, activeIndex, setActiveIndex,
      id, labelId, listboxId, size, disabled, options, setOptions
    }}>
      <div className={styles.container} ref={containerRef}>
        {children}
      </div>
    </SelectContext.Provider>
  );
};

export const SelectTrigger = ({ children, className }: { children: React.ReactNode; className?: string }) => {
  const { 
    isOpen, setIsOpen, labelId, listboxId, activeIndex, setActiveIndex, 
    value, options, disabled, id, onChange 
  } = useSelectContext();
  
  const searchString = useRef('');
  const searchTimeout = useRef<ReturnType<typeof setTimeout> | null>(null);

  const handleKeyDown = (e: React.KeyboardEvent) => {
    if (disabled) return;

    // Type-ahead logic
    if (e.key.length === 1 && !e.ctrlKey && !e.metaKey && !e.altKey) {
      searchString.current += e.key.toLowerCase();
      if (searchTimeout.current) clearTimeout(searchTimeout.current);
      searchTimeout.current = setTimeout(() => {
        searchString.current = '';
      }, 500);

      const matchIndex = options.findIndex((opt) =>
        opt.label.toLowerCase().startsWith(searchString.current)
      );

      if (matchIndex >= 0) {
        setActiveIndex(matchIndex);
        if (!isOpen) {
          onChange?.(options[matchIndex].value);
        }
      }
      return;
    }

    if (!isOpen) {
      if (e.key === 'Enter' || e.key === ' ' || e.key === 'ArrowDown' || e.key === 'ArrowUp') {
        e.preventDefault();
        setIsOpen(true);
        const currentIndex = options.findIndex(o => o.value === value);
        setActiveIndex(currentIndex >= 0 ? currentIndex : 0);
      }
      return;
    }

    switch (e.key) {
      case 'ArrowDown':
        e.preventDefault();
        setActiveIndex((prev) => (prev < options.length - 1 ? prev + 1 : prev));
        break;
      case 'ArrowUp':
        e.preventDefault();
        setActiveIndex((prev) => (prev > 0 ? prev - 1 : prev));
        break;
      case 'Enter':
      case ' ':
        e.preventDefault();
        if (activeIndex >= 0) {
          onChange?.(options[activeIndex].value);
          setIsOpen(false);
        }
        break;
      case 'Escape':
        setIsOpen(false);
        break;
      case 'Home':
        e.preventDefault();
        setActiveIndex(0);
        break;
      case 'End':
        e.preventDefault();
        setActiveIndex(options.length - 1);
        break;
    }
  };

  return (
    <div
      className={[
        styles.combobox,
        styles[\`combobox--\${size}\`],
        disabled && styles['combobox--disabled'],
        isOpen && styles['combobox--open'],
        className,
      ].join(' ')}
      role="combobox"
      aria-expanded={isOpen}
      aria-haspopup="listbox"
      aria-labelledby={labelId}
      aria-controls={listboxId}
      tabIndex={disabled ? -1 : 0}
      onKeyDown={handleKeyDown}
      onClick={() => !disabled && setIsOpen(!isOpen)}
      aria-activedescendant={activeIndex >= 0 ? \`\${id}-option-\${activeIndex}\` : undefined}
    >
      {children}
    </div>
  );
};

export const SelectValue = ({ placeholder }: { placeholder?: string }) => {
  const { value, options } = useSelectContext();
  const selectedOption = options.find(opt => opt.value === value);
  return (
    <span className={styles.value}>
      {selectedOption ? selectedOption.label : placeholder}
    </span>
  );
};

export const SelectIcon = () => (
  <span className={styles.arrow} aria-hidden="true">▼</span>
);

export const SelectContent = ({ children, className }: { children: React.ReactNode; className?: string }) => {
  const { isOpen, listboxId, labelId } = useSelectContext();
  if (!isOpen) return null;
  return (
    <ul
      id={listboxId}
      className={[styles.listbox, className].join(' ')}
      role="listbox"
      aria-labelledby={labelId}
    >
      {children}
    </ul>
  );
};

export const SelectItem = ({ value: itemValue, label, children }: { value: string; label: string; children?: React.ReactNode }) => {
  const { value, onChange, setIsOpen, options, setOptions, activeIndex, setActiveIndex, id } = useSelectContext();
  
  const index = options.findIndex(opt => opt.value === itemValue);
  
  useEffect(() => {
    setOptions(prev => {
      if (prev.find(opt => opt.value === itemValue)) return prev;
      return [...prev, { value: itemValue, label }];
    });
  }, [itemValue, label, setOptions]);

  return (
    <li
      id={\`\${id}-option-\${index}\`}
      role="option"
      aria-selected={value === itemValue}
      className={[
        styles.option,
        value === itemValue && styles['option--selected'],
        activeIndex === index && styles['option--active'],
      ].join(' ')}
      onClick={(e) => {
        e.stopPropagation();
        onChange?.(itemValue);
        setIsOpen(false);
      }}
      onMouseEnter={() => setActiveIndex(index)}
    >
      {children || label}
    </li>
  );
};

export const SelectItemText = ({ children }: { children: React.ReactNode }) => (
  <>{children}</>
);

export const SelectLabel = ({ children, className }: { children: React.ReactNode; className?: string }) => {
  const { labelId } = useSelectContext();
  return <label id={labelId} className={[styles.label, className].join(' ')}>{children}</label>;
};

export const Select = Object.assign(SelectRoot, {
  Root: SelectRoot,
  Trigger: SelectTrigger,
  Value: SelectValue,
  Icon: SelectIcon,
  Content: SelectContent,
  Item: SelectItem,
  ItemText: SelectItemText,
  Label: SelectLabel,
});

Select.displayName = 'Select';
SelectRoot.displayName = 'Select.Root';
SelectTrigger.displayName = 'Select.Trigger';
SelectValue.displayName = 'Select.Value';
SelectIcon.displayName = 'Select.Icon';
SelectContent.displayName = 'Select.Content';
SelectItem.displayName = 'Select.Item';
SelectItemText.displayName = 'Select.ItemText';
SelectLabel.displayName = 'Select.Label';
"
`;

exports[`Select snapshots > css mode snapshot 2`] = `
"/* Generated by Crucible — edit freely, re-generate with --force */

:root {
  --color-primary: #6C63FF;
  --color-secondary: #F3F2FF;
  --color-surface: #FFFFFF;
  --color-background: #F8F9FA;
  --color-border: #E2E1F0;
  --color-text: #1A1A2E;
  --color-text-muted: #6B6B8A;
  --color-danger: #E24B4A;
  --color-success: #1D9E75;
  --radius-sm: 4px;
  --radius-md: 8px;
  --radius-lg: 12px;
  --spacing-unit: 4px;
  --font-family: system-ui, sans-serif;
  --font-size-base: 16px;
}


.container {
  display:        flex;
  flex-direction: column;
  gap:            var(--spacing-unit);
  width:          100%;
  position:       relative;
}

.label {
  font-family: var(--font-family);
  font-size:   14px;
  font-weight: 500;
  color:       var(--color-text);
}

.combobox {
  display:         flex;
  align-items:     center;
  justify-content: space-between;
  background:      var(--color-surface);
  border:          1.5px solid var(--color-border);
  border-radius:   var(--radius-md);
  cursor:          pointer;
  font-family:     var(--font-family);
  color:           var(--color-text);
  transition:      border-color 0.15s ease, box-shadow 0.15s ease;
  width:           100%;
  box-sizing:      border-box;
}

.combobox--open {
  border-color: var(--color-primary);
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.combobox:focus-visible {
  outline:        2px solid var(--color-primary);
  outline-offset: 3px;
  border-color:   var(--color-primary);
}

.combobox--disabled {
  background: var(--color-background);
  cursor:     not-allowed;
  opacity:    0.7;
}

.combobox--error {
  border-color: var(--color-danger);
}

.value {
  flex: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.arrow {
  margin-left: calc(var(--spacing-unit) * 2);
  font-size:   0.8em;
  color:       var(--color-text-muted);
}

.listbox {
  position:      absolute;
  top:           100%;
  left:          0;
  right:         0;
  background:    var(--color-surface);
  border:        1.5px solid var(--color-primary);
  border-top:    none;
  border-radius: 0 0 var(--radius-md) var(--radius-md);
  list-style:    none;
  margin:        0;
  padding:       0;
  z-index:       10;
  max-height:    200px;
  overflow-y:    auto;
  box-shadow:    0 10px 15px -3px rgba(0, 0, 0, 0.1);
}

.option {
  padding:     calc(var(--spacing-unit) * 2) calc(var(--spacing-unit) * 4);
  cursor:      pointer;
  font-family: var(--font-family);
  font-size:   14px;
  color:       var(--color-text);
  transition:  background 0.15s ease;
}

.option--active {
  background: var(--color-secondary);
  color:      var(--color-primary);
}

.option--selected {
  font-weight: 600;
  background:  var(--color-secondary);
  color:       var(--color-primary);
}

.error {
  color:       var(--color-danger);
  font-family: var(--font-family);
  font-size:   12px;
  margin-top:  2px;
}

/* Sizes */
.combobox--sm { padding: 6px 10px;  font-size: 13px; }
.combobox--md { padding: 10px 14px; font-size: 15px; }
.combobox--lg { padding: 14px 18px; font-size: 17px; }
"
`;

exports[`Select snapshots > css mode snapshot 3`] = `
"import type { Meta, StoryObj } from '@storybook/react';
import React, { useState } from 'react';
import { Select } from './Select';

const meta: Meta<typeof Select> = {
  title: 'Crucible/Select',
  component: Select,
  parameters: { layout: 'centered' },
  argTypes: {
    variant:  { control: 'select', options: ['default', 'error'] },
    size:     { control: 'select', options: ['sm', 'md', 'lg'] },
    disabled: { control: 'boolean' },
  },
};
export default meta;
type Story = StoryObj<typeof Select>;

export const Default: Story = {
  render: (args) => {
    const [value, setValue] = useState('');
    return (
      <Select {...args} value={value} onChange={setValue}>
        <Select.Label>Country</Select.Label>
        <Select.Trigger>
          <Select.Value placeholder="Choose a country..." />
          <Select.Icon />
        </Select.Trigger>
        <Select.Content>
          <Select.Item value="us" label="United States" />
          <Select.Item value="ca" label="Canada" />
          <Select.Item value="uk" label="United Kingdom" />
          <Select.Item value="au" label="Australia" />
        </Select.Content>
      </Select>
    );
  },
};
"
`;

exports[`Select snapshots > tailwind mode snapshot 1`] = `
"import React, { useState, useRef, useEffect, useId, createContext, useContext } from 'react';

const variantClasses: Record<string, string> = {
  default: 'bg-[var(--color-surface)] border-[var(--color-border)] focus:border-[var(--color-primary)]',
  error: 'bg-[var(--color-surface)] border-[var(--color-danger)] focus:border-[var(--color-danger)]',
 };

const sizeClasses: Record<string, string> = {
  sm: 'px-3 py-1.5 text-sm',
  md: 'px-4 py-2 text-base',
  lg: 'px-5 py-3 text-lg',
};

export interface SelectOption {
  value: string;
  label: string;
}

export type SelectVariant = 'default' | 'error';
export type SelectSize    = 'sm' | 'md' | 'lg';

interface SelectContextValue {
  isOpen: boolean;
  setIsOpen: (open: boolean) => void;
  activeIndex: number;
  setActiveIndex: React.Dispatch<React.SetStateAction<number>>;
  value?: string;
  onChange?: (value: string) => void;
  labelId: string;
  listboxId: string;
  id: string;
  options: SelectOption[];
  setOptions: React.Dispatch<React.SetStateAction<SelectOption[]>>;
  disabled?: boolean;
  error?: string;
  variant: SelectVariant;
  size: SelectSize;
  placeholder: string;
}

const SelectContext = createContext<SelectContextValue | undefined>(undefined);

const useSelectContext = () => {
  const context = useContext(SelectContext);
  if (!context) throw new Error('Select components must be wrapped in <Select />');
  return context;
};

export interface SelectProps {
  options?:  SelectOption[];
  value?:    string;
  onChange?: (value: string) => void;
  variant?:  SelectVariant;
  size?:     SelectSize;
  disabled?: boolean;
  error?:    string;
  placeholder?: string;
  children: React.ReactNode;
}

const SelectRoot: React.FC<SelectProps> = ({
  options: initialOptions = [],
  value,
  onChange,
  variant = 'default',
  size = 'md',
  disabled,
  error,
  placeholder = 'Select an option',
  children,
}) => {
  const [isOpen, setIsOpen] = useState(false);
  const [activeIndex, setActiveIndex] = useState(-1);
  const [options, setOptions] = useState<SelectOption[]>(initialOptions);
  const containerRef = useRef<HTMLDivElement>(null);
  const id = useId();
  const labelId = \`\${id}-label\`;
  const listboxId = \`\${id}-listbox\`;

  useEffect(() => {
    const handleClickOutside = (e: MouseEvent) => {
      if (containerRef.current && !containerRef.current.contains(e.target as Node)) {
        setIsOpen(false);
      }
    };
    document.addEventListener('mousedown', handleClickOutside);
    return () => document.removeEventListener('mousedown', handleClickOutside);
  }, []);

  return (
    <SelectContext.Provider value={{ 
      isOpen, setIsOpen, activeIndex, setActiveIndex, value, onChange, 
      labelId, listboxId, id, options, setOptions, disabled, error, variant, size, placeholder 
    }}>
      <div className="flex flex-col gap-[var(--spacing-unit)] w-full relative" ref={containerRef}>
        {children}
      </div>
    </SelectContext.Provider>
  );
};

const SelectLabel: React.FC<{ children: React.ReactNode; className?: string }> = ({ children, className }) => {
  const { labelId } = useSelectContext();
  return <label id={labelId} className={["font-medium text-[var(--color-text)] text-sm", className].filter(Boolean).join(' ')}>{children}</label>;
};

const SelectTrigger: React.FC<{ children: React.ReactNode; className?: string }> = ({ children, className }) => {
  const { 
    isOpen, setIsOpen, labelId, listboxId, activeIndex, setActiveIndex, 
    value, options, disabled, id, onChange, variant, size, error
  } = useSelectContext();
  
  const searchString = useRef('');
  const searchTimeout = useRef<ReturnType<typeof setTimeout> | null>(null);

  const handleKeyDown = (e: React.KeyboardEvent) => {
    if (disabled) return;

    // Type-ahead logic
    if (e.key.length === 1 && !e.ctrlKey && !e.metaKey && !e.altKey) {
      searchString.current += e.key.toLowerCase();
      if (searchTimeout.current) clearTimeout(searchTimeout.current);
      searchTimeout.current = setTimeout(() => {
        searchString.current = '';
      }, 500);

      const matchIndex = options.findIndex((opt) =>
        opt.label.toLowerCase().startsWith(searchString.current)
      );

      if (matchIndex >= 0) {
        setActiveIndex(matchIndex);
        if (!isOpen) {
          onChange?.(options[matchIndex].value);
        }
      }
      return;
    }

    if (!isOpen) {
      if (e.key === 'Enter' || e.key === ' ' || e.key === 'ArrowDown' || e.key === 'ArrowUp') {
        e.preventDefault();
        setIsOpen(true);
        const currentIndex = options.findIndex(o => o.value === value);
        setActiveIndex(currentIndex >= 0 ? currentIndex : 0);
      }
      return;
    }

    switch (e.key) {
      case 'ArrowDown':
        e.preventDefault();
        setActiveIndex((prev) => (prev < options.length - 1 ? prev + 1 : prev));
        break;
      case 'ArrowUp':
        e.preventDefault();
        setActiveIndex((prev) => (prev > 0 ? prev - 1 : prev));
        break;
      case 'Enter':
      case ' ':
        e.preventDefault();
        if (activeIndex >= 0) {
          onChange?.(options[activeIndex].value);
          setIsOpen(false);
        }
        break;
      case 'Escape':
        setIsOpen(false);
        break;
      case 'Home':
        e.preventDefault();
        setActiveIndex(0);
        break;
      case 'End':
        e.preventDefault();
        setActiveIndex(options.length - 1);
        break;
    }
  };

  return (
    <>
      <div
        className={[
          'flex items-center justify-between bg-[var(--color-surface)] border-1.5 rounded-[var(--radius-md)] cursor-pointer transition-all outline-none',
          'focus-visible:ring-2 focus-visible:ring-[var(--color-primary)] focus-visible:ring-offset-2',
          isOpen && 'border-[var(--color-primary)] rounded-b-none',
          disabled && 'opacity-50 cursor-not-allowed bg-[var(--color-background)]',
          error && 'border-[var(--color-danger)]',
          variantClasses[variant],
          sizeClasses[size],
          className,
        ].join(' ')}
        role="combobox"
        aria-expanded={isOpen}
        aria-haspopup="listbox"
        aria-labelledby={labelId}
        aria-controls={listboxId}
        tabIndex={disabled ? -1 : 0}
        onKeyDown={handleKeyDown}
        onClick={() => !disabled && setIsOpen(!isOpen)}
        aria-activedescendant={activeIndex >= 0 ? \`\${id}-option-\${activeIndex}\` : undefined}
      >
        {children}
      </div>
      {error && <span className="text-xs text-[var(--color-danger)] mt-1" role="alert">{error}</span>}
    </>
  );
};

const SelectValue: React.FC<{ placeholder?: string }> = ({ placeholder: propPlaceholder }) => {
  const { value, options, placeholder: contextPlaceholder } = useSelectContext();
  const selectedOption = options.find(opt => opt.value === value);
  return (
    <span className="truncate flex-1 text-[var(--color-text)]">
      {selectedOption ? selectedOption.label : (propPlaceholder || contextPlaceholder)}
    </span>
  );
};

const SelectIcon: React.FC = () => (
  <span className="ml-2 text-[var(--color-text-muted)] text-xs" aria-hidden="true">▼</span>
);

const SelectContent: React.FC<{ children: React.ReactNode; className?: string }> = ({ children, className }) => {
  const { isOpen, listboxId, labelId, activeIndex } = useSelectContext();
  const listboxRef = useRef<HTMLUListElement>(null);

  useEffect(() => {
    if (isOpen && activeIndex >= 0 && listboxRef.current) {
      const optionEl = listboxRef.current.children[activeIndex] as HTMLElement;
      if (optionEl) optionEl.scrollIntoView({ block: 'nearest' });
    }
  }, [isOpen, activeIndex]);

  if (!isOpen) return null;

  return (
    <ul
      id={listboxId}
      ref={listboxRef}
      className={[
        "absolute top-full left-0 right-0 z-50 bg-[var(--color-surface)] border-1.5 border-[var(--color-primary)] border-t-0 rounded-b-[var(--radius-md)] shadow-lg max-h-[200px] overflow-y-auto m-0 p-0 list-none",
        className
      ].join(' ')}
      role="listbox"
      aria-labelledby={labelId}
    >
      {children}
    </ul>
  );
};

const SelectItem: React.FC<{ value: string; label: string; children?: React.ReactNode; className?: string }> = ({ value: itemValue, label, children, className }) => {
  const { value, onChange, setIsOpen, options, setOptions, activeIndex, setActiveIndex, id } = useSelectContext();
  
  const index = options.findIndex(opt => opt.value === itemValue);
  
  useEffect(() => {
    setOptions(prev => {
      if (prev.find(opt => opt.value === itemValue)) return prev;
      return [...prev, { value: itemValue, label }];
    });
  }, [itemValue, label, setOptions]);

  return (
    <li
      id={\`\${id}-option-\${index}\`}
      role="option"
      aria-selected={value === itemValue}
      className={[
        'px-4 py-2 cursor-pointer transition-colors text-sm',
        value === itemValue && 'bg-[var(--color-secondary)] text-[var(--color-primary)] font-semibold',
        activeIndex === index && 'bg-[var(--color-secondary)] text-[var(--color-primary)]',
        className
      ].join(' ')}
      onClick={(e) => {
        e.stopPropagation();
        onChange?.(itemValue);
        setIsOpen(false);
      }}
      onMouseEnter={() => setActiveIndex(index)}
    >
      {children || label}
    </li>
  );
};

const SelectItemText: React.FC<{ children: React.ReactNode }> = ({ children }) => (
  <>{children}</>
);

export const Select = Object.assign(SelectRoot, {
  Root: SelectRoot,
  Trigger: SelectTrigger,
  Value: SelectValue,
  Icon: SelectIcon,
  Content: SelectContent,
  Item: SelectItem,
  ItemText: SelectItemText,
  Label: SelectLabel,
});

Select.displayName = 'Select';
SelectRoot.displayName = 'Select.Root';
SelectTrigger.displayName = 'Select.Trigger';
SelectValue.displayName = 'Select.Value';
SelectIcon.displayName = 'Select.Icon';
SelectContent.displayName = 'Select.Content';
SelectItem.displayName = 'Select.Item';
SelectItemText.displayName = 'Select.ItemText';
SelectLabel.displayName = 'Select.Label';
"
`;

exports[`Select snapshots > tailwind mode snapshot 2`] = `
"import type { Meta, StoryObj } from '@storybook/react';
import React, { useState } from 'react';
import { Select } from './Select';

const meta: Meta<typeof Select> = {
  title: 'Crucible/Select',
  component: Select,
  parameters: { layout: 'centered' },
  argTypes: {
    variant:  { control: 'select', options: ['default', 'error'] },
    size:     { control: 'select', options: ['sm', 'md', 'lg'] },
    disabled: { control: 'boolean' },
  },
};
export default meta;
type Story = StoryObj<typeof Select>;

export const Default: Story = {
  render: (args) => {
    const [value, setValue] = useState('');
    return (
      <Select {...args} value={value} onChange={setValue}>
        <Select.Label>Country</Select.Label>
        <Select.Trigger>
          <Select.Value placeholder="Choose a country..." />
          <Select.Icon />
        </Select.Trigger>
        <Select.Content>
          <Select.Item value="us" label="United States" />
          <Select.Item value="ca" label="Canada" />
          <Select.Item value="uk" label="United Kingdom" />
          <Select.Item value="au" label="Australia" />
        </Select.Content>
      </Select>
    );
  },
};
"
`;
